feat(routes): implement /players POST route
