# src/models/player.ts
@@ -1,6 +1,4 @@
-import mongoose from 'mongoose';
-
-const { Schema, model } = mongoose;
+import { model, Schema, Types } from 'mongoose';
 
 export interface IPlayer {
   uuid: string;
@@ -8,10 +6,10 @@ export interface IPlayer {
   data: StatsSnapshot[];
 }
 
-interface StatsSnapshot {
-  rawStats: Record<string, any>;
-  queriedAt: number;
+export interface StatsSnapshot {
+  snapshotId: Types.ObjectId;
   receivedAt: number;
+  queriedAt: number;
 }
 
 const playerSchema = new Schema<IPlayer>(
@@ -23,12 +21,17 @@ const playerSchema = new Schema<IPlayer>(
     },
     data: [
       {
-        rawStats: Object,
-        queriedAt: {
-          type: Number,
+        snapshotId: {
+          type: Schema.Types.ObjectId,
+          required: true,
         },
         receivedAt: {
           type: Number,
+          required: true,
+        },
+        queriedAt: {
+          type: Number,
+          required: true,
         },
       },
     ],
